--- a/styles.css
+++ b/styles.css
@@ -1,114 +1,147 @@
 /* styles.css */
 
+html,
 body {
-    
-    background-size: cover;
-    color: #532827;
-    overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
-#page{
-    background: #333 url('img/restaurant.jpg') center center no-repeat;
-    min-width: 100%;
-    min-height: 100vh;
-    padding: 50px;
-    box-sizing: border-box;
 
+body {
+  color: #532827;
+  overflow: hidden;
+  background-image: url('./img/restaurant.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top left;
+  width: 100%;
+  height: 100%;
 }
+
+#page {
+  min-width: 100%;
+  padding: 50px;
+  box-sizing: border-box;
+}
+
 #container {
-    width: 90%;
-    max-width: 400px;
-    margin: auto;
-    padding: 50px;
-    box-sizing: border-box;
-    background: url('img/paper-pattern.jpg') top left repeat;
-    box-shadow: 0 10px 15px -8px #000;
-    opacity: 0.95;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    text-align: center;
+  width: 90%;
+  max-width: 400px;
+  height: 70%;
+  margin: auto;
+  padding: 50px;
+  box-sizing: border-box;
+  box-shadow: 0 10px 15px -8px #000;
+  background-color: #fff;
+  opacity: 0.95;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  text-align: center;
 }
 
 h1 {
-    margin: 0 0 20px;
-    padding: 0 0 20px;
-    border-bottom: solid 1px #ddd;
+  margin: 0 0 20px;
+  padding: 0 0 20px;
+  border-bottom: solid 1px #ddd;
 }
 
 form {
-    text-align: left;
+  text-align: left;
 }
 
 form label {
-    display: block;
-    margin: 25px 0;
-    font-weight: bold;
+  display: block;
+  margin: 25px 0;
+  font-weight: bold;
 }
 
 form input,
 form select {
-    padding: 8px;
-    margin: 10px 0;
+  padding: 8px;
+  margin: 10px 0;
 }
 
 form input[type="text"] {
-    width: 90px;
+  width: 90px;
 }
 
 button {
-    background: #6c2726;
-    color: white;
-    border: none;
-    border-bottom: solid 4px #222;
-    text-transform: uppercase;
-    font-size: 18px;
-    padding: 20px 30px;
-    width: 100%;
+  background: #6c2726;
+  color: white;
+  border: none;
+  border-bottom: solid 4px #222;
+  text-transform: uppercase;
+  font-size: 18px;
+  padding: 20px 30px;
+  width: 100%;
 }
 
 button:hover {
-    background: #4c2827;
-    border-bottom-color: #111;
+  background: #4c2827;
+  border-bottom-color: #111;
 }
 
 button:active {
-    position: relative;
-    top: 1px;
+  position: relative;
+  top: 1px;
 }
 
 #totalTip {
-    font-size: 50px;
-    margin-top: 40px;
+  font-size: 50px;
+  margin-top: 40px;
 }
 
 #totalTip:before {
-    content: "Tip amount";
-    font-size: 14px;
-    font-weight: bold;
-    display: block;
-    text-transform: uppercase;
+  content: "Tip amount";
+  font-size: 14px;
+  font-weight: bold;
+  display: block;
+  text-transform: uppercase;
 }
 
 #totalTip sup {
-    font-size: 24px;
-    top: -18px;
+  font-size: 24px;
+  top: -18px;
 }
 
 #totalTip small {
-    font-size: 14px;
-    font-weight: bold;
-    display: block;
+  font-size: 14px;
+  font-weight: bold;
+  display: block;
 }
 
-@media (max-width: 767px) {
-    #container{
-        width: 95%;
-        max-width: 95%;
-    }
+@media screen and (max-width: 768px) {
+  #container {
+    width: 95%;
+    max-width: 95%;
+    max-height: 80%;
+  }
+  #page {
+    padding: 15% 0;
+  }
+  form {
+    text-align: center;
+  }
 }
 
+@media screen and (max-height: 768px) {
+  #container {
+    padding: 20px;
+  }
+  #container h1 {
+    font-size: 1.5em;
+    padding: 0 0 10px;
+  }
+}
 
+@media screen and (max-height: 675px) {
+  #page {
+    padding: 20px;
+  }
+}
 
-
-
-
+@media screen and (max-height: 620px) {
+  body {
+    overflow: visible;
+  }
+}
