--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,10 @@ body {
 body {
   color: #532827;
   overflow: hidden;
-  /* background-image: url('./img/restaurant.jpg');
+  background-image: url('./img/restaurant.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: top left; */
-  background-color: #532827;
+  background-position: top left;
   width: 100%;
   height: 100%;
 }
@@ -116,12 +115,17 @@ button:active {
     width: 95%;
     max-width: 95%;
     max-height: 80%;
+    margin: 0 -5%;
   }
   #page {
     padding: 15% 0;
   }
   form {
     text-align: center;
+  }
+  body {
+    background-image: none;
+    background-color: #532827;
   }
 }
 
